# oceanvis-py

./: .buildinfo  .gitignore  README.md  actions_overview.html  build_docs.html  citation_guide.html  customisation_checklist.html  demo-output.html  environment.yml  example_interactive_colormaps-output.html  example_interactive_colormaps-output.ipynb  example_map_plot-output.html  example_map_plot-output.ipynb  faq.html  genindex.html  gitcollab.html  github_intro.html  gitorg_transfer.html  gitworkflow_solo.html  index.html  objects.inv  oceanvis_py.html  precommit_guide.html  project_structure.html  py-modindex.html  pypi_guide.html  pyproject.toml  requirements-dev.txt  requirements.txt  search.html  searchindex.js  setup.html  style_guide.html  template_project.html  writing_tests.html
.github/workflows/: docs.yml  docs_deploy.yml  tests.yml
_modules/: index.html
_modules/oceanvis_py/backends/: matplotlib_backend.html  (+1 more)
_sources/: demo-output.ipynb.txt  example_interactive_colormaps-output.ipynb.txt  example_map_plot-output.ipynb.txt  index.rst.txt
data/: m212_072_towyo_interpolated.nc  m212_074_towyo_interpolated.nc
docs/source/: conf.py  index.rst  oceanvis_py.rst  setup.md
figures/: m212_072_salinity.eps  m212_072_temperature.eps  m212_074_salinity.eps  m212_074_temperature.eps  salinity_comparison.eps  temperature_comparison.eps
notebooks/: SA_YlGnBu_r.cpt  cello_figures_fixed.ipynb  data_outline.txt  demo.ipynb  example_interactive_colormaps.ipynb  example_map_plot.ipynb  example_towyo.ipynb  interactive_colormaps.ipynb  plot_M212_ctd_towyo.ipynb  sig2.cpt  towyo36_data_outline2.txt  towyo72_data_outline.txt  towyo72_data_outline2.txt
notebooks/archive/: cello_figures.ipynb  cello_figures_clean.ipynb
notebooks/cptfiles/: CT_RdYlBu_r.cpt  test_salinity.cpt  topo_negative.cpt  velocity_polar.cpt
notebooks/data/: ship_track_m212.xy
oceanvis_py/: __init__.py
oceanvis_py/backends/: __init__.py  matplotlib_backend.py  pygmt_backend.py
oceanvis_py/config/: matplotlib_style.mplstyle  variable_mappings.yaml
oceanvis_py/core/: __init__.py  colormaps.py  coordinates.py  custom_colormaps.py  data_loader.py
oceanvis_py/plots/: __init__.py  maps.py  plotters.py  sections.py  widgets.py
tests/: test_colormaps.py  test_coordinates.py  test_core_modules.py  test_data_loader.py  test_maps.py  test_plots_sections.py  test_sections_utilities.py  test_widgets.py
(+13 files in other folders)
